<resources>
    <string name="app_name">Tick Tac Toe</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="first_human">You go first</string>
    <string name="turn_human">Your turn</string>
    <string name="turn_comp">Computer\'s turn</string>
    <string name="result_tie">It\'s tie!</string>
    <string name="result_human_wins">You won!</string>
    <string name="result_comp_wins">Computer won!</string>
    <string name="info">Information</string>
    <string name="human">Human:</string>
    <string name="comp">Computer:</string>
    <string name="ties">Ties:</string>
    <string name="newGame">Start new game!</string>

</resources>
